src/web-app/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp
spec:
  type: NodePort
  ports:
  - name: "goapp-service"
    port: 3000
    targetPort: 3000
  selector:
    app: goapp
