src/web-app/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservicea
  namespace: "dev"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    app.kubernetes.io/name: "nginx-ingress-controller"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: goapp
          servicePort: 3000
